--- a/TechnicalThapa/express/package.json
+++ b/TechnicalThapa/express/package.json
@@ -2,13 +2,14 @@
   "name": "express",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "hbs": "^4.2.0"
   }
 }
